Update .gitignore to exclude unnecessary folders

--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,9 @@ crashlytics-build.properties
 # Firebase Plugins 제외
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_4_1.bundle
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_4_1.so
+Assets/Firebase/
+Adaptive Performance/
+Editor Default Resources/
+ExternalDependencyManager/
+GeneratedLocalRepo/
 ``
